--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "ng serve",
         "build": "ng build",
         "build:prod": "ng build --prod",
+        "ci": "ng build --prod --base-href jh-code.com",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
