build: cleanup scripts and add docs to ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ cache:
 
 script:
   - npm run lint
-  - npm run build:prod
+  - npm run build
+  - npm run build:docs
 
 deploy:
   provider: pages
