--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ cache:
     - node_modules
 
 script:
-  - npm run lint
-  - npm run build -- --prod
-  - npm run build:docs
+  - npm run ci
 
 deploy:
   provider: pages
